# baxter_epoke

./: .gitignore  .rosinstall  CMakeLists.txt  LICENSE  README.md  kinetic.rosinstall  package.xml
launch/: baxter2_world.launch  baxter_world.launch  kinect_moveit.launch  moveit_init.launch
plugins/: CMakeLists.txt  cube_plugin.cpp  cube_plugin_gz11.cpp  cube_plugin_gz7.cpp
rviz/: kinect_moveit.rviz
scripts/: agent_test.py  main.py  send_urdf_fragment.py
scripts/misc/: interactive_static_transform_publisher.py
scripts/src/: baxter.py  environment.py  utils.py
scripts/src/model/: QLearningAgent.py  q_agent.py  qtable.py  random.py
worlds/: baxter.world  baxter2.world
