<?xml version="1.0"?>
<package>
  <name>baxter_epoke</name>
  <version>1.0.0</version>
  <description>The baxter_epoke package</description>

  <maintainer email="jonathan.frennert@gmail.com">Jonathan Gustafsson Frennert</maintainer>
  <author email="jonathan.frennert@gmail.com">Ravi Jonathan Gustafsson Frennert</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>